# AIS_D-STGT

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env.example  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
ais_dstgt/: __init__.py
ais_dstgt/data/: __init__.py  processor.py  schemas.py
ais_dstgt/data/ingestion/: __init__.py  csv_handler.py
ais_dstgt/data/preprocessing/: __init__.py  anomaly_detector.py  coordinate_transform.py  data_cleaner.py  kalman_filter.py  scene_aggregator.py  scene_dataset.py  tcpa_dcpa_calculator.py  trajectory_segmenter.py  trajectory_smoother.py
data/: README.md
data/interim/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: gen_ref_pages.py  index.md
tests/: __init__.py  test_data_processor.py  test_init.py
